.metadata/.plugins/org.eclipse.cdt.ui/Uebung1.build.log
15:27:28 **** Incremental Build of configuration Debug for project Uebung1 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o MyString.o "..\\MyString.cpp" 
In file included from ..\MyString.cpp:7:0:
..\MyString.h:9:7: warning: override controls (override/final) only available with -std=c++11 or -std=gnu++11 [enabled by default]
 class MyString final {
       ^
..\MyString.h:10:2: error: 'shared_ptr' does not name a type
  shared_ptr<char> m_contents;
  ^
..\MyString.h:11:2: error: 'size_t' does not name a type
  size_t m_len;
  ^
..\MyString.cpp: In constructor 'MyString::MyString(char*)':
..\MyString.cpp:12:2: error: 'm_contents' was not declared in this scope
  m_contents = shared_ptr<char>(unique_ptr<char[]>(new char[len]));
  ^
..\MyString.cpp:12:15: error: 'shared_ptr' was not declared in this scope
  m_contents = shared_ptr<char>(unique_ptr<char[]>(new char[len]));
               ^
..\MyString.cpp:12:26: error: expected primary-expression before 'char'
  m_contents = shared_ptr<char>(unique_ptr<char[]>(new char[len]));
                          ^
..\MyString.cpp:12:26: error: expected ';' before 'char'

15:27:28 Build Finished (took 360ms)

